V1.02 fixed input styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -244,4 +244,7 @@ font-size: 12px;
   .conditions{
     margin: 0;
   }
+  .forecastContainer{
+    display: none;
+  }
 }
